--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eleventy-from-scratch",
+  "name": "synoptic-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "A project that provides evidence towards my L$ Software Dev apprenticeship",
   "main": ".eleventy.js",
   "scripts": {
     "start": "npx gulp && concurrently 'npx gulp watch' 'npx eleventy --serve'",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hankchizljaw/eleventy-from-scratch.git"
+    "url": ""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hankchizljaw/eleventy-from-scratch/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/hankchizljaw/eleventy-from-scratch#readme",
+  "homepage": "",
   "dependencies": {
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-cache-assets": "^2.0.2",
